# AI_AGENTS

./: README.md
.devcontainer/: devcontainer.json
MatchMaker-agent/: generate_users.py  main.py  pyproject.toml  users.json  utils.py  whatsapp.py
agent_chainlit/: main.py
context-management/: connection.py  main.py  pyproject.toml
deployment_of_agent/: pyproject.toml
guardrails_agent/: main.py  pyproject.toml
lite-llm/: main.py  pyproject.toml
multi-agent-system/: main.py  pyproject.toml  requirements.txt
open-router/backend/: main.py  pyproject.toml
streaming-responses/: main.py
sync_and_async/: main.py  pyproject.toml
tool_calling/: main.py
tools_calling_chainlit/: main.py
