[project]
name = "matchmaker-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.6.0",
    "dotenv>=0.9.9",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
    "twilio>=9.6.5",
]
